vNext
 - BREAKING: White Namespace changed from White.Core to TestStack.White
 - Fix: Expandable lists now restore their previous expansion (after the items have been retrieved), if `ComboBoxItemsPopulatedWithoutDropDownOpen` is set to false

Version 0.10.3
 - Some small updates to WPF Get extension methods
 - Further tooltip fixes

Version 0.10.2
 - Made ListItem selection more reliable

Version 0.10.1
 - Fix: Tooltips can now be found as expected
 - Retry.ForDefault method now reads it's default timeout from White's configuration
 - New Configuration value 'FindWindowTimeout' which is defaulted to 30 seconds
 - Added ability to take screenshots of the desktop:
    - `Desktop.CaptureScreenshot()` returns a Bitmap
    - `Desktop.TakeScreenshot(string filename, ImageFormat imageFormat)` saves the screenshot to file

Version 0.10.0
 - BREAKING: Removed Log4net, now using Castle's logging abstractions. See https://github.com/TestStack/White/wiki/log4net-Removal
 - BREAKING: SearchCriteria.ByControlType now takes WindowsFramework rather than string
 - BREAKING: WindowsFramework members renamed to Is[Framework] from [Framework]
 - Fix: Lots of combobox updates/fixes
 - Fix: AsContainer() could throw a NullReferenceException
 - Fix: Checkbox fixes
 - Fix: Added support for WPF DatePicker
 - All exceptions are now serialisable

Version 0.9.3
 - BREAKING: White is now compiled as x86 (fixes issues when run in x64 process)
 - White will no longer throw TargetInvocationExceptions in some cases. 
 - Added support for swapping mouse buttons (for left handed users/system setup) - See FAQ for details

Version 0.9.2
 - BREAKING: UIItem.Get now throws an AutomationException when the UI Element is not found
 - Change: UIItem.Get now auto retries to fetch the item
 - FIX: Added small delay when fetching menu items (to compensate for menu animation in newer versions of windows)
 - FIX: AttachOrLaunch method now can accept a full Path.